Tests/4-java/src/imt.fil.a3/recherche.fj/parser/error/FieldNotFound.java
package imt.fil.a3.recherche.fj.parser.error;

public final class FieldNotFound implements TypeError {
    public final String name;

    public FieldNotFound(String name) {
        this.name = name;
    }
}
